Fix title alignment and visually-hidden clickable link.

--- a/modules/custom/az_card/css/az-card-title-hover.css
+++ b/modules/custom/az_card/css/az-card-title-hover.css
@@ -14,5 +14,5 @@
 
 .card-body .visually-hidden {
   display: block;
-  position: static;
+  position: static !important;
 }
